--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@react-native-oh-tpl/react-native-tcp-socket",
   "title": "React Native Tcp Socket",
   "version": "6.2.0-0.0.1",
-  "description": "React Native TCP socket API for Android & iOS with SSL/TLS support",
+  "description": "React Native TCP socket API for Android & iOS  & HarmonyOS with SSL/TLS support",
   "main": "src/index.js",
   "types": "lib/types/index.d.ts",
   "scripts": {
@@ -14,16 +14,9 @@
     "prepublishOnly": "yarn declaration:build && yarn checkjs"
   },
   "files": [
-    "/android/src/",
-    "/android/build.gradle",
-    "/ios",
-    "!Podfile*",
-    "/windows",
     "/src",
     "/lib",
-    "/harmony",
-    "/*.podspec",
-    "/jest"
+    "/harmony"
   ],
   "repository": {
     "type": "git",
